Fix #874: lazy evaluation for git provided properties